Fix(search): Remove 'jumpy' effect when showing up search box;  - trades off fixed width, given that user adjusts the window frequently Fix(side-nav): Menu not popping up when new cookie is inserted

--- a/src/sass/constants/_main.scss
+++ b/src/sass/constants/_main.scss
@@ -15,7 +15,6 @@
 }
 
 .no-scroll {
-  height: 100%;
   overflow: hidden;
 }
 
